--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>Eric Newton</title>
+  <meta name="description" content="Portfolio Page for Eric Newton in hopes of getting him a job">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,85 +27,392 @@
 </head>
 
 <body>
-<div>
-  <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">About</a>
-    </li>
-    <div style="width: 10%"></div>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Resume</a>
-    </li>
-    <div style="width: 10%"></div>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
-    </li>
-  </ul>
-</div>
-  <div class="container">
+<section id="top-section" class="bg-white">
+  <div class="pt-4">
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">About</a>
+      </li>
+      <div style="width: 10%"></div>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Resume</a>
+      </li>
+      <div style="width: 10%"></div>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+  <div class="container-xl mt-1">
     <div class="row align-items-center">
-        <div class="col-sm">
-          <img class="img-fluid sm" src="3f5cd858c617856391350f6c6d53d8aa.png">
-        </div>
-        <div class="col-sm-1"></div>
-        <div class="col-md">
-          <h1 class="h1">Hi, I'm Eric!</h1>
-          <br>
-          <p class="lead text-muted">
-            I'm a Vancouver based Computer Science student currently studying at The University of British Columbia, and
-            currently working as a Full-Stack Web Developer at BCEdAccess. I have a passion for computers, mathematics, and education. My
-            aim is to make user-friendly programs with robust and reliable code.
-          </p>
-        </div>
+      <div class="col-md">
+        <h1 class="h1" id=name>Hi, I'm Eric!</h1>
+        <br>
+        <h2 id="intro" class="text-muted h2">
+          I'm a student and web developer living in Vancouver, BC. I have a passion for computers, mathematics,
+          and education. My aim is to build fast, responsive, and robust web applications.
+        </h2>
+      </div>
+
+      <div class="col-lg-2"></div>
+
+      <div class="col-sm">
+        <picture>
+          <source srcset="3f5cd858c617856391350f6c6d53d8aa.webp" type="image/webp">
+          <source srcset="3f5cd858c617856391350f6c6d53d8aa.png" type="image/png">
+          <img class="img-fluid sm" src="3f5cd858c617856391350f6c6d53d8aa.png" alt="My Beautiful Face">
+        </picture>
+      </div>
+
     </div>
-    <div class="row align-items-center">
-      <br><br><br>
-      <p class="text-muted">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent convallis pellentesque arcu, vel sagittis erat. Suspendisse tristique magna et dui viverra, quis viverra elit mattis. Nullam feugiat semper vestibulum. Etiam tincidunt ac dolor eu vulputate. Aliquam placerat efficitur fermentum. Quisque tristique luctus mi sodales scelerisque. Praesent id lectus consectetur, consequat leo sit amet, pulvinar lorem. Phasellus pellentesque, metus at aliquet elementum, arcu purus euismod ipsum, sed vulputate metus ipsum at lorem. Suspendisse non consectetur ligula.
-      </p>
-    </div>
+
+
   </div>
 
+</section>
+<svg width="100%" height="100%" style="position: absolute">
+  <circle fill="#FFFFFF" r="10%" cx="0%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="10%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="20%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="30%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="40%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="50%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="60%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="70%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="80%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="90%"></circle>
+  <circle fill="#FFFFFF" r="10%" cx="100%"></circle>
+</svg>
 
-  <!--  <div style = "display: flex; flex-direction: row; justify-content: stretch">-->
-  <!--    <div style="width: 36rem;">-->
-  <!--      <h1>Hi, I'm Eric!</h1>-->
-  <!--      <h3 style="line-height: 5vh">I'm a Vancouver based Computer Science student currently studying at The University of British Columbia, and currently working as a Full-Stack Web Developer. I have a passion for computers, mathematics, and education. My aim is to make user-friendly programs with robust and reliable code.</h3>-->
-  <!--    </div>-->
-  <!--    <div style = "width: 12vw"></div>-->
-  <!--    <div style = "width: 32vw; height: 25vw; background: aqua; margin-top: 5rem; vertical-align: center; min-width: 24vw">-->
-  <!--      <img src="6de34af91263afdbc5532cd1eccd0e44.png" style="width: inherit; transform-origin: bottom; transform: translateY(-7vw)" alt="ah">-->
-  <!--    </div>-->
+<div id="buffer"></div>
 
-  <!--  </div>-->
-  <!--  <div style="height: 6rem;"></div>-->
-  <!--  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent convallis pellentesque arcu, vel sagittis erat. Suspendisse tristique magna et dui viverra, quis viverra elit mattis. Nullam feugiat semper vestibulum. Etiam tincidunt ac dolor eu vulputate. Aliquam placerat efficitur fermentum. Quisque tristique luctus mi sodales scelerisque. Praesent id lectus consectetur, consequat leo sit amet, pulvinar lorem. Phasellus pellentesque, metus at aliquet elementum, arcu purus euismod ipsum, sed vulputate metus ipsum at lorem. Suspendisse non consectetur ligula.</p>-->
+<section>
+  <div class="container-xl">
+    <div class="row">
+      <div class="col-md p-3 m-3">
+        <h5 class="h5 mt-4" style="line-height: 140%; font-weight: 400">
+          I am currently working at BCEdAccess as a Full Stack Web Developer creating a custom CMS. As well, I have been
+          a teaching assistant within the UBC Departments of Computer Science for the past 3 years. Previously
+          I have worked with UBC Department of Medicine doing Bioinformatics work focusing on tracking drug resistance
+          in Hepatitis C.
+        </h5>
+      </div>
+      <div class="col align-content-center  p-3 m-3 w-100" style="background-color: #CAF0F8; border-radius: 10%">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <h3>Skills</h3>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="container-fluid">
+
+              <div class="row">
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">Java</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+                <div class="col-1 col-lg-2"></div>
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">Python</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">TypeScript</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+                <div class="col-1 col-lg-2"></div>
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">JavaScript</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">HTML/CSS</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+                <div class="col-1 col-lg-2"></div>
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">Angular</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">MySQL</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+                <div class="col-1 col-lg-2"></div>
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">Firebase</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">Postgres</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+                <div class="col-1 col-lg-2"></div>
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">Express.js</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">React</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+                <div class="col-1 col-lg-2"></div>
+                <div class="col-5">
+                  <div class="row justify-content-center">
+                    <div class="container-fluid">
+
+                      <div class="row">
+                        <div class="col-6">
+                          <p style="font-size: 90%">C/C++</p>
+                        </div>
+                        <div class="col-6">
+                          <p style="font-size: 90%; text-align: right">★★★</p>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
 
 
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-          integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-          crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-          crossorigin="anonymous"></script>
+            </div>
 
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () {
-      ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto');
-    ga('set', 'anonymizeIp', true);
-    ga('set', 'transport', 'beacon');
-    ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+          </div>
+
+
+        </div>
+
+
+      </div>
+
+    </div>
+</section>
+<div id="timesheet"></div>
+
+
+<!--  <div style = "display: flex; flex-direction: row; justify-content: stretch">-->
+<!--    <div style="width: 36rem;">-->
+<!--      <h1>Hi, I'm Eric!</h1>-->
+<!--      <h3 style="line-height: 5vh">I'm a Vancouver based Computer Science student currently studying at The University of British Columbia, and currently working as a Full-Stack Web Developer. I have a passion for computers, mathematics, and education. My aim is to make user-friendly programs with robust and reliable code.</h3>-->
+<!--    </div>-->
+<!--    <div style = "width: 12vw"></div>-->
+<!--    <div style = "width: 32vw; height: 25vw; background: aqua; margin-top: 5rem; vertical-align: center; min-width: 24vw">-->
+<!--      <img src="6de34af91263afdbc5532cd1eccd0e44.png" style="width: inherit; transform-origin: bottom; transform: translateY(-7vw)" alt="ah">-->
+<!--    </div>-->
+
+<!--  </div>-->
+<!--  <div style="height: 6rem;"></div>-->
+<!--  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent convallis pellentesque arcu, vel sagittis erat. Suspendisse tristique magna et dui viverra, quis viverra elit mattis. Nullam feugiat semper vestibulum. Etiam tincidunt ac dolor eu vulputate. Aliquam placerat efficitur fermentum. Quisque tristique luctus mi sodales scelerisque. Praesent id lectus consectetur, consequat leo sit amet, pulvinar lorem. Phasellus pellentesque, metus at aliquet elementum, arcu purus euismod ipsum, sed vulputate metus ipsum at lorem. Suspendisse non consectetur ligula.</p>-->
+
+
+<script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+<script>
+  new Timesheet('timesheet', 2002, 2013, [
+    ['2002', '09/2002', 'A freaking awesome time', 'lorem'],
+    ['06/2002', '09/2003', 'Some great memories', 'ipsum'],
+    ['2003', 'Had very bad luck'],
+    ['10/2003', '2006', 'At least had fun', 'dolor'],
+    ['02/2005', '05/2006', 'Enjoyed those times as well', 'ipsum'],
+    ['07/2005', '09/2005', 'Bad luck again', 'default'],
+    ['10/2005', '2008', 'For a long time nothing happened', 'dolor'],
+    ['01/2008', '05/2009', 'LOST Season #4', 'lorem'],
+    ['01/2009', '05/2009', 'LOST Season #4', 'lorem'],
+    ['02/2010', '05/2010', 'LOST Season #5', 'lorem'],
+    ['09/2008', '06/2010', 'FRINGE #1 & #2', 'ipsum']
+  ]);
+</script>
+
+
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () {
+    ga.q.push(arguments)
+  };
+  ga.q = [];
+  ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto');
+  ga('set', 'anonymizeIp', true);
+  ga('set', 'transport', 'beacon');
+  ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
+
 </body>
 
 </html>
